; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_verify_uptodate.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_verify_uptodate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.unpack_trees_options = type { i32 }

@CE_NEW_SKIP_WORKTREE = common dso_local global i32 0, align 4
@ERROR_NOT_UPTODATE_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @verify_uptodate(%struct.cache_entry* %0, %struct.unpack_trees_options* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cache_entry*, align 8
  %5 = alloca %struct.unpack_trees_options*, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %4, align 8
  store %struct.unpack_trees_options* %1, %struct.unpack_trees_options** %5, align 8
  %6 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %5, align 8
  %7 = getelementptr inbounds %struct.unpack_trees_options, %struct.unpack_trees_options* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %18, label %10

10:                                               ; preds = %2
  %11 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %12 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @CE_NEW_SKIP_WORKTREE, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %23

18:                                               ; preds = %10, %2
  %19 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %20 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %5, align 8
  %21 = load i32, i32* @ERROR_NOT_UPTODATE_FILE, align 4
  %22 = call i32 @verify_uptodate_1(%struct.cache_entry* %19, %struct.unpack_trees_options* %20, i32 %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %18, %17
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @verify_uptodate_1(%struct.cache_entry*, %struct.unpack_trees_options*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
